# ptival.github.io

./: _config.yml  index.html  shell.nix
_includes/: head.html
_layouts/: post.html
_posts/: 2013-12-12-matrix-traversals-and-unification.html  2015-06-03-introducing-peacoq.markdown  2017-02-24-modular-parser-combinators.markdown  2017-04-10-nameless-tactic-programming-with-haystac.markdown  2017-05-15-parser-generators-and-function-application.markdown  2018-09-30-card-game-01.markdown  2018-09-30-card-game-02.markdown  2018-10-08-card-game-03.markdown  2018-10-29-card-game-04.markdown  2018-12-11-card-game-05.markdown  2018-12-29-card-game-06.markdown  2020-01-28-deep-dive-into-meta-theory-a-la-carte-01.markdown  2020-02-15-deep-dive-into-meta-theory-a-la-carte-02.markdown  2020-02-23-deep-dive-into-meta-theory-a-la-carte-03.markdown  2020-04-02-nix-haskell-setup.markdown  2022-07-04-writert.markdown
_sass/: _layout.scss
code/: .gitignore
code/contt-for-compilers/: contt-for-compilers.cabal
code/contt-for-compilers/src/: ANF.hs  Source.hs  Var.hs
code/contt-for-compilers/src/BlogPost/: ANF.hs  CCLL.hs  Examples.hs  Renaming.hs  Source.hs  Var.hs
code/mtc-3/: Algebra.v  Boolean.v  BooleanType.v  Demo.v  Eval.v  Functor.v  Hacks.v  IndexedAlgebra.v  IndexedFunctor.v  IndexedSubFunctor.v  IndexedSum1.v  Natural.v  NaturalType.v  Soundness.v  Stuck.v  SubFunctor.v  Sum1.v  TypeEquality.v  TypeOf.v  UniversalProperty.v  WellTypedValue.v  WellTypedValueProj1Type.v  WellTypedValueProjection.v  WellTypedValueProjectionRegression.v  _CoqProject
css/: custom.css
(+10 files in other folders)
