cabal-version:      2.4
name:               contt-for-compilers
version:            0.1.0.0
author:             Valentin Robert
maintainer:         valentin.robert.42@gmail.com

library
    build-depends:
        base,
        containers,
        lens,
        mtl,
        prettyprinter,
        transformers,
    other-modules:
        BlogPost.ANF
        BlogPost.CCLL
        BlogPost.Examples
        BlogPost.Source
        BlogPost.Renaming
        BlogPost.Var
    hs-source-dirs:   src
